update jgraphx library, no migration yet